--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@hookform/resolvers": "^3.9.0",
     "@next/swc-wasm-nodejs": "13.5.1",
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -21,7 +25,6 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.1",
     "jsonwebtoken": "^9.0.2",
-    "@types/jsonwebtoken": "^9.0.6",
     "lucide-react": "^0.446.0",
     "mysql2": "^3.9.2",
     "next": "13.5.1",
@@ -32,5 +35,8 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/react-day-picker": "^5.3.0"
   }
 }
