--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ MYSQL_HOST=teachersys.mysql.database.azure.com
 MYSQL_DATABASE=teachersys
 MYSQL_USER=lords
 MYSQL_PASSWORD=P@ssw0rdP@ssw0rd
+JWT_SECRET=7ader
